Fix color, gap, and padding for head/foot

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -12,7 +12,7 @@ body {
 ul {
   list-style-type: none;
   display: flex;
-  gap: 12px;
+  gap: 15px;
   margin: 0;
   padding: 0;
 }
@@ -21,17 +21,18 @@ ul {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
 
 .header, .footer {
   display: flex;
   justify-content: space-between;
-  padding: 12px;
+  padding: 15px;
 }
 
 .footer {
   display: flex;
-  background-color: #eee;
+  background-color: #eeeeee;
   margin-top: auto;
 }
 
